Initial release: ISTools v1.4 - Professional QGIS Vectorization Toolkit
 Features:
- Extend Lines: Intelligent line extension with snapping
- Polygon Generator: Create polygons from coordinates
- Bounded Polygon Generator: Generate polygons within frames
- Point on Surface Generator: Representative points for polygons
- Intersection Line: Topology management with shared vertices

 Multi-language support (EN/PT-BR)
 Professional GIS workflows optimization
 Ready for QGIS Plugin Repository submission

--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
         <file>icon_polygon_generator.png</file>
         <file>icon_bounded_polygon_generator.png</file>
         <file>icon_point_on_surface_generator.png</file>
+        <file>icon_intersection_line.png</file>
     </qresource>
 </RCC>
